--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 									<ul class="alt">
 										<li>+91 9764 445488</li>
 										<li><a style="border: none;" href="mailto:sandeep.pacharane@gmail.com" target="_blank"> sandeep.pacharane@gmail.com</a></li>
-										<li><a style="border: none;" href="https://www.google.com/maps/@18.5751386,73.8188778,19z/data=!4m4!7m3!1m1!1s100516749357825121276!2e2?entry=ttu" target="_blank"> My Home Address</a></li>
+										<li><a style="border: none;" href="https://www.google.com/maps/place/Sai+park/@18.5751435,73.819687,50m/data=!3m1!1e3!4m9!1m2!7m1!2e1!3m5!1s0x3bc2b90035816f8b:0x208c077c4572683e!8m2!3d18.5752571!4d73.8199657!16s%2Fg%2F11w4wb_c49?entry=ttu" target="_blank"> My Home Address</a></li>
 										<li>Please fill out the following details to contact me on WhatsApp:</li>
 										<li>&nbsp;</li>
 									</ul>
